crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__string_list@inner_null_Contains_ab.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: String(
        StringFilter {
            operator: Contains,
            query: "ab",
        },
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Utf8,
                nullable: true,
            },
        ),
    },
    unfiltered: ListArray
    [
      StringArray
    [
      "hello_ab",
      "a",
    ],
      StringArray
    [
      "b",
      null,
    ],
      StringArray
    [
      "ab",
      null,
    ],
    ],
    filtered: ListArray
    [
      StringArray
    [
      "hello_ab",
      "a",
    ],
      StringArray
    [
      "ab",
      null,
    ],
    ],
}
