crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__string_list@no_null_EndsWith_ab.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: String(
        StringFilter {
            operator: EndsWith,
            query: "ab",
        },
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Utf8,
            },
        ),
    },
    unfiltered: ListArray
    [
      StringArray
    [
      "hello_ab",
      "a",
    ],
      StringArray
    [
      "b",
      "c",
    ],
      StringArray
    [
      "ab",
      "A B",
    ],
    ],
    filtered: ListArray
    [
      StringArray
    [
      "hello_ab",
      "a",
    ],
      StringArray
    [
      "ab",
      "A B",
    ],
    ],
}
